--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
   </div>
   <div></div>
   <div>
-    <h2>Albums I've enjoyed in 2022</h2>
+    <h2>Some albums I've enjoyed in 2022</h2>
   </div>
   <div class="row">
     <div class="column-box">
-      <a href="https://open.spotify.com/album/1mxG8YY9wY5Q3mLcDs2khW">
-        <img class="popular screenshot" src="333.jpeg" alt="333 deluxe thumbnail">
-        <p>Tinashe</p>
-        <p>333 Deluxe</p>
+      <a href="https://open.spotify.com/album/5r36AJ6VOJtp00oxSkBZ5h">
+        <img class="popular screenshot" src="harry.jpeg" alt="Harry's House thumbnail">
+        <p>Harry Styles</p>
+        <p>Harry's House</p>
       </a>
     </div>
     <div class="column-box">
@@ -65,17 +65,17 @@
       </a>
     </div>
     <div class="column-box">
-      <a href="https://open.spotify.com/album/6eiCnBFhY8yvhLjZzjIsxQ">
-        <img class="popular screenshot" src="lucky.jpeg" alt="Candy Drip thumnail">
-        <p>Lucky Daye</p>
-        <p>Candy Drip</p>
+      <a href="https://open.spotify.com/album/79WcTJuCulopfqul1awYJk">
+        <img class="popular screenshot" src="breezy.jpeg" alt="Breezythumnail">
+        <p>Chris Brown</p>
+        <p>Breezy</p>
       </a>
     </div>
     <div class="column-box">
-      <a href="https://open.spotify.com/album/2nLOHgzXzwFEpl62zAgCEC">
-        <img class="popular screenshot" src="weeknd.jpeg" alt="Harry's House thumbnail">
-        <p>The Weeknd</p>
-        <p>Dawn FM</p>
+      <a href="https://open.spotify.com/album/3cf4iSSKd8ffTncbtKljXw">
+        <img class="popular screenshot" src="drake.jpeg" alt="Honestly Nevermind thumbnail">
+        <p>Drake</p>
+        <p>Honestly Nevermind</p>
       </a>
     </div>
   </div>
