--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <p>Yup, I usually prefer podcasts when I'm preparing dinner. I listen to Laker Film Room, Nintendo VoiceChat and most shows on The Ringer network.</p>
        </li>
        <li>Who's an artist I've recently discovered through Spotify? 
-        <p>I feel like I discover a new artist everyday on Spotify, that algorithm is incredible! I hope to get to write some code on it someday.... But to answer your question - I recently discovered and haven't stopped listening to J.Robb!</p>
+        <p>I feel like I discover a new artist everyday on Spotify, that algorithm is incredible! I hope to get to write some code on it someday.... But to answer your question - I recently discovered the band Mr. Twin Sister!</p>
       </li>
        <li>I'm in a karaoke showdown, What's my go to song? 
-        <p>Let me love you by Mario.</p> 
+        <p>I'll have to go with 'Candy Rain' by Soul for Real.</p> 
       </li>
        <li>Top 3 artists I would most like to see perform live? 
         <p>Wow, there are so many I could mention! But off the top of my head - Toro Y Moi, Frank Ocean and Tinashe.</p>
