--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
   <div class="row">
     <div class="column-box">
       <a href="https://open.spotify.com/album/5r36AJ6VOJtp00oxSkBZ5h">
-        <img class="popular screenshot" src="harry.jpeg" alt="Harry's House thumbnail">
-        <p>Harry Styles</p>
-        <p>Harry's House</p>
+        <img class="popular screenshot" src="rave.jpeg" alt="Rave & Roses thumbnail">
+        <p>Rema</p>
+        <p>Rave & Roses</p>
       </a>
     </div>
     <div class="column-box">
