--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <div></div>
   <div>
-    <h2>Some albums I've enjoyed in 2022</h2>
+    <h2>Albums I Enjoyed in 2022</h2>
   </div>
   <div class="row">
     <div class="column-box">
