--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
       </div>
     </div> 
   </header>
-  <div class="left">
+    <div class="left">
      <p>Hey Spotify, I created this (less formal) page just for you. Here's the thing, the vibes at Spotify are immaculate, you guys can't just let anyone into the band! So I interviewed with myself to gather some answers to the important questions:</p>
      <ul>
        <li>Do I have any real life "band" experience?
         <p>Yes! I was in a rap group called RCK (Rap Chronic Kings lol) back in high school. We only released one(1) EP, our peers loved it, I'd even call it "critically acclaimed."</p>
        </li>
        <li>Any podcasts that I listen to on Spotify?
-        <p>Yup, I usually prefer podcasts when I'm preparing dinner. I listen to Laker Film Room, Nintendo VoiceChat and most shows on The Ringer network.</p>
+        <p>Yup, I usually listen to podcasts when I'm preparing dinner or on the treadmill. My favourites are Laker Film Room, Nintendo VoiceChat and The Mismatch with Kevin O'Connor and Chris Vernon.</p>
        </li>
-       <li>Who's an artist I've recently discovered through Spotify? 
-        <p>I feel like I discover a new artist everyday on Spotify, that algorithm is incredible! I hope to get to write some code on it someday.... But to answer your question - I recently discovered the band Mr. Twin Sister!</p>
+       <li>Who's an artist I've discovered through Spotify? 
+        <p>I feel like I discover a new artist everyday on Spotify, that algorithm is incredible! I hope to get to write some code on it someday.... But to answer your question - Unknown Mortal Orchestra</p>
       </li>
        <li>I'm in a karaoke showdown, What's my go to song? 
-        <p>I'll have to go with 'Candy Rain' by Soul for Real.</p> 
+        <p>Candy Rain by Soul For Real.</p> 
       </li>
        <li>Top 3 artists I would most like to see perform live? 
         <p>Wow, there are so many I could mention! But off the top of my head - Toro Y Moi, Frank Ocean and Tinashe.</p>
@@ -40,47 +40,47 @@
   </div>
   <div></div>
   <div>
-    <h2>Albums I Enjoyed in 2022</h2>
+    <h2>Comfort Albums</h2>
   </div>
   <div class="row">
     <div class="column-box">
-      <a href="https://open.spotify.com/album/71S4BwV5E6Pwwz0ASZB7th">
-        <img class="popular screenshot" src="rave.jpeg" alt="Rave & Roses thumbnail">
-        <p>Rema</p>
-        <p>Rave & Roses</p>
+      <a href="https://open.spotify.com/album/392p3shh2jkxUxY2VHvlH8">
+        <img class="popular screenshot" src="frank.jpeg" alt="Channel Orange thumbnail">
+        <p>Frank Ocean</p>
+        <p>Channel Orange</p>
       </a>
     </div>
     <div class="column-box">
-      <a href="https://open.spotify.com/album/1atjqOZTCdrjxjMyCPZc2g">
-         <img class="popular screenshot" src="kendrick.jpeg" alt="mr  morale & the big steppers thumbnail">
-         <p>Kendrick Lamar</p>
-        <p>Mr Morale & The Big Steppers</p>
+      <a href="https://open.spotify.com/album/2ZUFSbIkmFkGag000RWOpA">
+         <img class="popular screenshot" src="nwts.jpeg" alt="nwts thumbnail">
+         <p>Drake</p>
+        <p>Nothing Was The Same</p>
       </a>
      </div>
     <div class="column-box">
-      <a href="https://open.spotify.com/album/16AQyjz1z9rOsTm6iVrBUR">
-        <img class="popular screenshot" src="toro.jpeg" alt="mahal thumnail">
-        <p>Toro Y moi</p>
-        <p>Mahal</p>
+      <a href="https://open.spotify.com/album/6WrqA9shYRYrelq2CLQf05">
+        <img class="popular screenshot" src="nashe.jpeg" alt="Songs For You thumnail">
+        <p>Tinashe</p>
+        <p>Songs For You</p>
       </a>
     </div>
     <div class="column-box">
-      <a href="https://open.spotify.com/album/79WcTJuCulopfqul1awYJk">
-        <img class="popular screenshot" src="breezy.jpeg" alt="Breezythumnail">
-        <p>Chris Brown</p>
-        <p>Breezy</p>
+      <a href="https://open.spotify.com/album/0UMMIkurRUmkruZ3KGBLtG">
+        <img class="popular screenshot" src="forest.jpeg" alt="Forest Hills thumnail">
+        <p>J Cole</p>
+        <p>2014 Forest Hills Drive</p>
       </a>
     </div>
     <div class="column-box">
-      <a href="https://open.spotify.com/album/3cf4iSSKd8ffTncbtKljXw">
-        <img class="popular screenshot" src="drake.jpeg" alt="Honestly Nevermind thumbnail">
-        <p>Drake</p>
-        <p>Honestly Nevermind</p>
+      <a href="https://open.spotify.com/album/31qVWUdRrlb8thMvts0yYL">
+        <img class="popular screenshot" src="tame.jpeg" alt="Slow Rushthumbnail">
+        <p>Tame Impala</p>
+        <p>The Slow Rush</p>
       </a>
     </div>
   </div>
   <div>
-    <h2>Artists I've enjoyed Watching Live</h2>
+    <h2>Notable Live Shows</h2>
   </div>
   <div class="row">
     <div class="column-box">
