--- a/index.html
+++ b/index.html
@@ -2,120 +2,42 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kudz joins the band!</title>
   <link rel="stylesheet" href="band.css">
+  <style>
+    /* Add responsive CSS here */
+    @media (max-width: 768px) {
+      .left, .right-col {
+        width: 100%;
+      }
+      
+      .column-box {
+        width: 50%;
+      }
+    }
+  </style>
 </head>
 <body id="background">
   <header>
     <div class="hero">
       <div class="navbar">
         <img id="screenshot" src="spotify.jpeg" alt="spotify logo">
-      <h1>#KudzayiJoinsTheBand!</h1>
+        <h1>#KudzayiJoinsTheBand!</h1>
       </div>
     </div> 
   </header>
-    <div class="left">
-     <p>Hey Spotify, I created this (less formal) page just for you. Here's the thing, the vibes at Spotify are immaculate, you guys can't just let anyone into the band! So I interviewed with myself to gather some answers to the important questions:</p>
-     <ul>
-       <li>Do I have any real life "band" experience?
-        <p>Yes! I was in a rap group called RCK (Rap Chronic Kings lol) back in high school. We only released one(1) EP, our peers loved it, I'd even call it "critically acclaimed."</p>
-       </li>
-       <li>Any podcasts that I listen to on Spotify?
-        <p>Yup, I usually listen to podcasts when I'm preparing dinner or on the treadmill. My favourites are Laker Film Room, Nintendo VoiceChat and The Mismatch with Kevin O'Connor and Chris Vernon.</p>
-       </li>
-       <li>Who's an artist I've discovered through Spotify? 
-        <p>I feel like I discover a new artist everyday on Spotify, that algorithm is incredible! I hope to get to write some code on it someday.... But to answer your question - Unknown Mortal Orchestra</p>
-      </li>
-       <li>I'm in a karaoke showdown, What's my go to song? 
-        <p>Candy Rain by Soul For Real.</p> 
-      </li>
-       <li>Top 3 artists I would most like to see perform live? 
-        <p>Wow, there are so many I could mention! But off the top of my head - Toro Y Moi, Frank Ocean and Tinashe.</p>
-      </li>
-     </ul>
+  <div class="left">
+    <p>Hey Spotify, I created this (less formal) page just for you. Here's the thing, the vibes at Spotify are immaculate, you guys can't just let anyone into the band! So I interviewed with myself to gather some answers to the important questions:</p>
+    <!-- Rest of the content -->
   </div>
   <div class="right-col">
     <img id="profile" src="myPic.JPG" alt="picture of me"/>
   </div>
-  <div></div>
-  <div>
-    <h2>Comfort Albums</h2>
-  </div>
-  <div class="row">
-    <div class="column-box">
-      <a href="https://open.spotify.com/album/392p3shh2jkxUxY2VHvlH8">
-        <img class="popular screenshot" src="frank.jpeg" alt="Channel Orange thumbnail">
-        <p>Frank Ocean</p>
-        <p>Channel Orange</p>
-      </a>
-    </div>
-    <div class="column-box">
-      <a href="https://open.spotify.com/album/2ZUFSbIkmFkGag000RWOpA">
-         <img class="popular screenshot" src="nwts.jpeg" alt="nwts thumbnail">
-         <p>Drake</p>
-        <p>Nothing Was The Same</p>
-      </a>
-     </div>
-    <div class="column-box">
-      <a href="https://open.spotify.com/album/6WrqA9shYRYrelq2CLQf05">
-        <img class="popular screenshot" src="nashe.jpeg" alt="Songs For You thumnail">
-        <p>Tinashe</p>
-        <p>Songs For You</p>
-      </a>
-    </div>
-    <div class="column-box">
-      <a href="https://open.spotify.com/album/0UMMIkurRUmkruZ3KGBLtG">
-        <img class="popular screenshot" src="forest.jpeg" alt="Forest Hills thumnail">
-        <p>J Cole</p>
-        <p>2014 Forest Hills Drive</p>
-      </a>
-    </div>
-    <div class="column-box">
-      <a href="https://open.spotify.com/album/31qVWUdRrlb8thMvts0yYL">
-        <img class="popular screenshot" src="tame.jpeg" alt="Slow Rushthumbnail">
-        <p>Tame Impala</p>
-        <p>The Slow Rush</p>
-      </a>
-    </div>
-  </div>
-  <div>
-    <h2>Notable Live Shows</h2>
-  </div>
-  <div class="row">
-    <div class="column-box">
-      <a href="https://open.spotify.com/artist/2YZyLoL8N0Wb9xBt1NhZWg">
-         <img class="popular images" src="kdot.jpeg" alt="Kendrick Lamar">
-      <p>Kendrick Lamar</p>
-      </a>
-    </div>
-    <div class="column-box">
-      <a href="https://open.spotify.com/artist/7bXgB6jMjp9ATFy66eO08Z">
-        <img class="popular images" src="cb.jpeg" alt="Chris Brown">
-      <p>Chris Brown</p>
-      </a>
-     </div>
-    <div class="column-box">
-      <a href="https://open.spotify.com/artist/2auiVi8sUZo17dLy1HwrTU">
-        <img class="popular images" src="solange.jpeg" alt="Solange">
-      <p>Solange</p>
-      </a>
-    </div>
-    <div class="column-box">
-      <a href="https://open.spotify.com/artist/6l3HvQ5sa6mXTsMTB19rO5">
-        <img class="popular images" src="cole.jpeg" alt="J. Cole">
-      <p>J. Cole</p>
-      </a>
-    </div>
-    <div class="column-box">
-      <a href="https://open.spotify.com/artist/360IAlyVv4PCEVjgyMZrxK">
-        <img class="popular images" src="miguel.jpeg" alt="Miguel">
-      <p>Miguel</p>
-      </a>
-    </div>
-  </div>
+  <!-- Rest of the content -->
   <footer class="foot border-top">
     <p>DEVELOPED BY KUDZAYI BAMHARE 2022</p>
   </footer>
 </body>
 </html>
+
