--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
          </ul>
       </div>
       <div class="col-md-6">
-        <img id="profile" src="myPic.JPG" alt="picture of me"/>
+        <img id="profile" src="mac.jpeg" alt="picture of me"/>
       </div>
     </div>
      <div></div>
